--- a/style/style.css
+++ b/style/style.css
@@ -27,10 +27,6 @@
     --fonte-android: 'idroid'; 
 }
 
-*{
-    margin: 0px;
-    padding: 0px;
-}
 
 body{
     background-color: var(--cor0);
@@ -67,16 +63,15 @@ header > h1{
 
 header > p{
     font-size: 1.2em;
-    padding: 0px 10px;
     max-width: 600px;
-    text-align: center;
+    margin:auto;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.329);
     padding-bottom: 50px;
 }
 
 nav{
     text-align: left;
-    padding: 0px;
+    padding: 0px 20px;
     background-color: var(--cor5);
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
 }
