--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,10 @@
     --fonte-android: 'idroid'; 
 }
 
+*{
+    margin: 0px;
+    padding: 0px;
+}
 
 body{
     background-color: var(--cor0);
@@ -71,7 +75,7 @@ header > p{
 
 nav{
     text-align: left;
-    padding: 0px 20px;
+    padding: 10px;
     background-color: var(--cor5);
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
 }
