--- a/style/style.css
+++ b/style/style.css
@@ -154,6 +154,10 @@ section h2{
     margin: auto;
 }
 
+img {
+    width: 100%
+}
+
 section.video{
     background-color: var(--cor5);
     margin: 0px -20px 30px -20px;
